# MathGalaxy

./: .gitmodules  CMakeLists.txt  LICENSE.md
GUIApp/: CMakeLists.txt
GUIApp/assets/shaders/: planet.frag  planet.vert  sky.frag  sky.vert  star.frag  star.vert
GUIApp/include/: AMaterial.hpp  AMesh.hpp  Application.hpp  Camera.hpp  CameraController.hpp  DrawContext.hpp  IController.hpp  IDrawable.hpp  IWidget.hpp  IWindowImpl.hpp  Material.hpp  Shader.hpp  Sky.hpp  Texture.hpp  Transform.hpp  View.hpp  Window.hpp
GUIApp/include/drawables/: AMaterial.hpp  Group.hpp  Light.hpp  MeshNode.hpp  Node.hpp  Sky.hpp  Sphere.hpp  Triangle.hpp
GUIApp/include/drawables/materials/: ColoredMaterial.hpp  DiffusedMaterial.hpp  SkyMaterial.hpp  StarMaterial.hpp
GUIApp/include/drawables/meshes/: Sphere.hpp  Triangle.hpp
GUIApp/include/drawables/nodes/: Group.hpp  Light.hpp  MeshNode.hpp  Node.hpp
GUIApp/include/gui/: AWidget.hpp  DemoGUI.hpp  GUI.hpp  IGUI.hpp  MenuPanel.hpp
GUIApp/include/gui/menu/: AMenuItem.hpp  IMenuItem.hpp  MenuItemEnabler.hpp  MenuList.hpp
GUIApp/include/gui/widgets/: TransformWidget.hpp  ViewportWidget.hpp  WidgetGroup.hpp
GUIApp/include/impl/: GLFWApplicationImpl.hpp  GLFWGraphicsContext.hpp  GLFWWindowImpl.hpp
GUIApp/include/infrastruct/: Application.hpp  BBox.hpp  DrawContext.hpp  DrawState.hpp  IDrawable.hpp  IGUI.hpp  IGraphicsContext.hpp  ILoaderImpl.hpp  IViewImpl.hpp  IWindowImpl.hpp  Loader.hpp  Model.hpp  Shader.hpp  StringId.hpp  UnorderedMap.hpp  View.hpp  Window.hpp
GUIApp/include/infrastruct/impl/: GLFWApplicationImpl.hpp  GLFWGraphicsContext.hpp  GLFWInputHandler.hpp  GLFWWindowImpl.hpp  GLLoaderImpl.hpp  GLMeshImpl.hpp  GLShaderImpl.hpp  GLTextureImpl.hpp  GLViewImpl.hpp
GUIApp/include/infrastruct/objects/: Batch.hpp  Light.hpp  Object.hpp
GUIApp/include/infrastruct/resources/: AMesh.hpp  IMeshImpl.hpp  IShaderImpl.hpp  ITextureImpl.hpp  Mesh.hpp  MeshData.hpp  Shader.hpp  ShaderData.hpp  Texture.hpp
GUIApp/include/infrastruct/resources/meshes/: Sphere.hpp  Triangle.hpp
GUIApp/include/materials/: ColoredMaterial.hpp  DiffusedMaterial.hpp  SkyMaterial.hpp  StarMaterial.hpp
GUIApp/include/meshes/: Sphere.hpp  Triangle.hpp
GUIApp/include/widgets/: DemoWidget.hpp  TransformWidget.hpp  WidgetSet.hpp
GUIApp/src/: AMaterial.cpp  AMesh.cpp  Application.cpp  Camera.cpp  CameraController.cpp  DrawContext.cpp  Material.cpp  Path.cpp  Shader.cpp  Sky.cpp  Texture.cpp  Transform.cpp  View.cpp  Window.cpp  main.cpp
GUIApp/src/drawables/: AMaterial.cpp  AMesh.cpp  Group.cpp  Light.cpp  MeshNode.cpp  Node.cpp  Sky.cpp  Sphere.cpp  Texture.cpp  Transform.cpp  Triangle.cpp
GUIApp/src/drawables/materials/: ColoredMaterial.cpp  DiffusedMaterial.cpp  SkyMaterial.cpp  StarMaterial.cpp
GUIApp/src/drawables/meshes/: Sphere.cpp  Triangle.cpp
GUIApp/src/drawables/nodes/: Group.cpp  Light.cpp  MeshNode.cpp  Node.cpp
GUIApp/src/gui/: AWidget.cpp  DemoGUI.cpp  GUI.cpp  MenuPanel.cpp
GUIApp/src/gui/menu/: AMenuItem.cpp  MenuItemEnabler.cpp  MenuList.cpp
GUIApp/src/gui/widgets/: TransformWidget.cpp  ViewportWidget.cpp  WidgetGroup.cpp
GUIApp/src/impl/: GLFWApplicationImpl.cpp  GLFWGraphicsContext.cpp  GLFWInputHandler.cpp  GLFWWindowImpl.cpp
GUIApp/src/infrastruct/: Application.cpp  BBox.cpp  DrawContext.cpp  DrawState.cpp  Loader.cpp  Model.cpp  Shader.cpp  StringId.cpp  View.cpp  Window.cpp
GUIApp/src/infrastruct/impl/: GLFWApplicationImpl.cpp  GLFWGraphicsContext.cpp  GLFWInputHandler.cpp  GLFWWindowImpl.cpp  GLLoaderImpl.cpp  GLMeshImpl.cpp  GLShaderImpl.cpp  GLTextureImpl.cpp  GLViewImpl.cpp
GUIApp/src/infrastruct/objects/: Batch.cpp  Light.cpp  Object.cpp
GUIApp/src/infrastruct/resources/: AMesh.cpp  Mesh.cpp  MeshData.cpp  Shader.cpp  ShaderData.cpp  Texture.cpp  TextureData.cpp
GUIApp/src/infrastruct/resources/meshes/: Sphere.cpp  Triangle.cpp
GUIApp/src/materials/: ColoredMaterial.cpp  DiffusedMaterial.cpp  SkyMaterial.cpp  StarMaterial.cpp
GUIApp/src/meshes/: Sphere.cpp  Triangle.cpp
GUIApp/src/widgets/: DemoWidget.cpp  TransformWidget.cpp  WidgetSet.cpp
Simulation/: CMakeLists.txt
Simulation/include/private/: GalaxyRegistry.hpp  World.hpp
Simulation/include/private/components/: PreAcceleration.hpp  PrePreAcceleration.hpp  PreVelocity.hpp
Simulation/include/public/: BeemanGalaxy.hpp  CentralDifferenceGalaxy.hpp  EulerGalaxy.hpp  EulerKromerGalaxy.hpp  Galaxy.hpp  IDifferenceScheme.hpp  IGalaxyRegistry.hpp  IView.hpp  IWorld.hpp  Simulation.hpp  Vector.hpp  VerletGalaxy.hpp  World.hpp
Simulation/include/public/components/: Acceleration.hpp  Mass.hpp  Position.hpp  Velocity.hpp
Simulation/include/public/schemes/: CentralDifferenceScheme.hpp  EulerKromerScheme.hpp  EulerScheme.hpp  VerletScheme.hpp
Simulation/src/: BeemanGalaxy.cpp  CentralDifferenceGalaxy.cpp  EulerGalaxy.cpp  EulerKromerGalaxy.cpp  Galaxy.cpp  GalaxyRegistry.cpp  Simulation.cpp  Vector.cpp  VerletGalaxy.cpp  World.cpp
Simulation/src/schemes/: CentralDifferenceScheme.cpp  EulerKromerScheme.cpp  EulerScheme.cpp  VerletScheme.cpp
SimulationTests/: CMakeLists.txt  GravityTests.cpp  MovementTests.cpp
SimulationTests/helpers/: StubView.cpp  StubView.hpp
